# torch

./: .gitignore  Cargo.toml  MIT-LICENSE  README.md
src/: load_handler.rs  main.rs  makefile  output.rs  search.rs  searcher.rs  spawner.rs
src/resources/css/: file-icon-vivid.min.css  window.css
src/resources/html/: index.htm
src/resources/tis/: candidates.tis  lib.tis  main.tis  search.tis  settings.tis  window.tis
src/searcher/: mod.rs
